--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.test.sym.coolwheather">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.ChooseAreaActivity"
-            android:label="@string/app_name">
-        </activity>
+        <activity
+            android:name=".activity.ChooseAreaActivity"
+            android:label="@string/app_name"></activity>
+        <activity android:name=".activity.WeatherActivity"></activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-
 
 </manifest>
