--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,18 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.ChooseAreaActivity"
-            android:label="@string/app_name"></activity>
-        <activity android:name=".activity.WeatherActivity"></activity>
+            android:label="@string/app_name" />
+        <activity android:name=".activity.WeatherActivity" />
+
+        <service
+            android:name=".service.AutoUpdateService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <receiver
+            android:name=".receiver.AutoUpdateReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
     </application>
 
 </manifest>
